Fix: Hero image overflow

--- a/style.css
+++ b/style.css
@@ -140,8 +140,18 @@ label{
     display: none;
 }
 
+@media (max-width: 1600px){
+    .hero{
+        display: none;
+    }
+}
+
 @media (max-width: 960px){
     header .navbar{
+        display: none;
+    }
+
+    .hero{
         display: none;
     }
 
@@ -218,6 +228,10 @@ label{
     .content .info h2{
         font-size: 2.188rem;
         line-height: 2.5rem;
+    }
+
+    .hero{
+        display: none;
     }
 
     .content .info h2 span{
